get back goapp in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,25 @@
 version: '3'
 
 services:
-  # goapp:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: 'workshop-goapp'
-  #   ports:
-  #     - "5000:5000"
-  #   restart: unless-stopped
-  #   depends_on: 
-  #     - "mongodb"
-  #   links:
-  #     - "mongodb"
-  #   environment:
-  #     ENV: development
-  #     PORT: 5000
-  #     DB_MONGO_URI: mongodb://localhost:29017
-  #     DB_MONGO_DBNAME: workshop
-  #   networks:
-  #     - backend
+  goapp:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: 'workshop-goapp'
+    ports:
+      - "5000:5000"
+    restart: unless-stopped
+    depends_on: 
+      - "mongodb"
+    links:
+      - "mongodb"
+    environment:
+      ENV: development
+      PORT: 5000
+      DB_MONGO_URI: mongodb://localhost:29017
+      DB_MONGO_DBNAME: workshop
+    networks:
+      - backend
 
   mongodb:
     image: 'mongo'
