--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,28 +7,31 @@ services:
       dockerfile: Dockerfile
     container_name: 'workshop-goapp'
     ports:
-      - "5000:5000"
+      - 5000:5000
     restart: unless-stopped
     depends_on: 
-      - "mongodb"
+      - mongo
     links:
-      - "mongodb"
+      - mongo
     environment:
       ENV: development
       PORT: 5000
-      DB_MONGO_URI: mongodb://localhost:29017
+      DB_MONGO_URI: mongodb://mongo:27017
       DB_MONGO_DBNAME: workshop
     networks:
-      - backend
+      - goworkshop
 
-  mongodb:
-    image: 'mongo'
-    container_name: 'workshop-mongo'
+  mongo:
+    image: "mongo"
+    container_name: "workshop-mongo"
     volumes:
       - ./mongo-volume:/data/db
     ports:
+      - 27017
       - 29017:27017
+    networks:
+      - goworkshop
 
 
 networks:
-  backend:
+  goworkshop:
