--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: 'workshop-goapp'
     ports:
       - 5000:5000
-    restart: always
+    restart: unless-stopped
     depends_on: 
       - mongo
     links:
